[CELEBORN-448] Support exclude worker manually